<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".print.PrintActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/idTVPrinterStatus"
        android:layout_marginTop="200dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:id="@+id/idTVPrinterStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/printer_connecting"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/iTVMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/idTVPrinterStatus"
        android:text=""
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/iTVCountPrint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iTVMessage"
        android:text=""
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold" />



    <ProgressBar

        android:id="@+id/progress_Bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:indeterminate = "false"
        android:layout_below="@id/iTVCountPrint"
        android:max="100"
        android:minWidth="200dp"
        android:minHeight="50dp"
        android:height="100dp"
        android:layout_centerInParent="true"
        android:progress="0"
        android:layout_marginStart="70dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="100dp"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_below="@id/iTVCountPrint"
        android:visibility="invisible"
        android:text="@string/print_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:height="100dp"
        android:textSize="30sp"
        android:layout_below="@id/iTVCountPrint"
        android:visibility="invisible"
        android:text="@string/back_to_web" />

    <TextView
        android:id="@+id/iTVUrlPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_back"
        android:text=""
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>